--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
 
     <title>Koala &mdash; Bundesamt f&uuml;r Strahlenschutz</title>
 
-    <link rel="stylesheet" type="text/css" href="http://openlayers.org/en/master/css/ol.css">
-    <script src="http://openlayers.org/en/master/build/ol-debug.js"></script>
+    <link rel="stylesheet" type="text/css" href="resources/lib/openlayers-v3.10.1-dist/ol.css">
+    <script src="resources/lib/openlayers-v3.10.1-dist/ol-debug.js"></script>
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
 
@@ -47,7 +47,7 @@
             //};
         };
     </script>
-    
+
     <!-- The line below must be kept intact for Sencha Cmd to build your application -->
     <script id="microloader" type="text/javascript" src="bootstrap.js"></script>
 </head>
