Add a docs folder for relevant docs

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -17,8 +17,8 @@
     Ext.Loader.setConfig({
         enabled: true,
         paths: {
-            'BasiGX': '../packages/remote/BasiGX/src',
-            'Koala': '../app'
+            BasiGX: '../packages/remote/BasiGX/src',
+            Koala: '../app'
         }
     });
     </script>
