Remove commented HTML-fragment

--- a/src/index.html
+++ b/src/index.html
@@ -51,5 +51,5 @@
     <!-- The line below must be kept intact for Sencha Cmd to build your application -->
     <script id="microloader" type="text/javascript" src="bootstrap.js"></script>
 </head>
-<body><!-- <a class="overlay" id="vienna" target="_blank" href="http://en.wikipedia.org/wiki/Vienna">Vienna</a> --></body>
+<body></body>
 </html>
