Use the non-debug version of OpenLayers.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Koala &mdash; Bundesamt f&uuml;r Strahlenschutz</title>
 
     <link rel="stylesheet" type="text/css" href="resources/lib/openlayers-v3.10.1-dist/ol.css">
-    <script src="resources/lib/openlayers-v3.10.1-dist/ol-debug.js"></script>
+    <script src="resources/lib/openlayers-v3.10.1-dist/ol.js"></script>
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
 
