--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <title>Koala &mdash; Bundesamt f&uuml;r Strahlenschutz</title>
 
     <link rel="stylesheet" type="text/css" href="resources/lib/openlayers-v3.15.1-dist/ol.css">
+    <script src="resources/lib/proj4js/proj4.js"></script>
+    <script src="resources/lib/proj4js/proj4-defs.js"></script>
     <script src="resources/lib/openlayers-v3.15.1-dist/ol.js"></script>
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
