Add a missing semicolon

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -34,7 +34,7 @@
     <script src="./test-helper-functions.js"></script>
     <script src="./load-tests.js"></script>
     <script>
-      mocha.run()
+      mocha.run();
     </script>
   </body>
 </html>
