--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="resources/lib/openlayers-v3.15.1-dist/ol.css">
     <script src="resources/lib/proj4js/proj4.js"></script>
     <script src="resources/lib/proj4js/proj4-defs.js"></script>
-    <script src="resources/lib/openlayers-v3.15.1-dist/ol.js"></script>
+    <script src="resources/lib/openlayers-v3.15.1-dist/ol-debug.js"></script>
     <script type="text/javascript">
 // configure the appContext URL to be used to get the application context
 var Koala = Koala || {};
