--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,12 @@
     <script src="resources/lib/proj4js/proj4-defs.js"></script>
     <script src="resources/lib/openlayers-v3.15.1-dist/ol.js"></script>
     <script type="text/javascript">
+// configure the appContext URL to be used to get the application context
+var Koala = Koala || {};
+// must be queryable from XHR (CORS…)
+Koala.appContextUrl = "resources/appContext.json";
+    </script>
+    <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
 
         // This function is called by the Microloader after it has performed basic
