[WATCHOUT!] changed index.html to use external appContext.json as default

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,11 @@
     <script src="resources/lib/openlayers-v3.15.1-dist/ol.js"></script>
     <script src="resources/lib/d3/d3.js"></script>
     <script type="text/javascript">
-// configure the appContext URL to be used to get the application context
-var Koala = Koala || {};
-// must be queryable from XHR (CORS…)
-Koala.appContextUrl = "resources/appContext.json";
+        // configure the appContext URL to be used to get the application context
+        var Koala = Koala || {};
+        // must be queryable from XHR (CORS…)
+        //Koala.appContextUrl = "resources/appContext.json";
+        Koala.appContextUrl = "/gis_client_configs/appContext.json";
     </script>
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
