--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         var Koala = Koala || {};
         // must be queryable from XHR (CORS…)
         //Koala.appContextUrl = "resources/appContext.json";
-        Koala.appContextUrl = "/gis_client_configs/appContext.json";
+        Koala.appContextUrl = window.location.protocol + "//" + window.location.hostname + "/gis_client_configs/appContext.json";
     </script>
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
