minor changes in title

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="shortcut icon" href="./favicon.ico"></link>
 
-    <title>IMIS3-GIS &mdash; Bundesamt f&uuml;r Strahlenschutz</title>
+    <title>IMIS3[GIS] - BfS - Bundesamt f&uuml;r Strahlenschutz</title>
 
     <link rel="stylesheet" type="text/css" href="resources/lib/openlayers-v3.15.1-dist/ol.css">
     <script src="resources/lib/proj4js/proj4.js"></script>
