--- a/src/test/index.html
+++ b/src/test/index.html
@@ -18,7 +18,7 @@
         enabled: true,
         paths: {
             BasiGX: '../packages/remote/BasiGX/src',
-            Koala: '../app'
+            Koala: 'http://localhost:3000'
         }
     });
     </script>
