--- a/src/test/modern/index.html
+++ b/src/test/modern/index.html
@@ -2,14 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Koala Testsuite</title>
+    <title>Koala Modern Testsuite</title>
+
     <link rel="stylesheet" href="../../node_modules/mocha/mocha.css" />
-    <script src="http://openlayers.org/en/master/build/ol.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../resources/lib/openlayers-v3.19.1-dist/ol.css">
+
+    <script src="../../resources/lib/proj4js/proj4.js"></script>
+    <script src="../../resources/lib/proj4js/proj4-defs.js"></script>
+    <script src="../../resources/lib/openlayers-v3.19.1-dist/ol.js"></script>
+    <script src="../../resources/lib/d3/d3.js"></script>
     <script src="../../ext/build/ext-modern-all.js"></script>
-    <script src="https://geoext.github.io/geoext3/master/GeoExt.js"></script>
     <script src="../../node_modules/expect.js/index.js"></script>
     <script src="../../node_modules/sinon/pkg/sinon.js"></script>
     <script src="../../node_modules/mocha/mocha.js"></script>
+
+    <script type="text/javascript">
+        // configure the appContext URL to be used to get the application context
+        var Koala = Koala || {};
+        // must be queryable from XHR (CORS…)
+        Koala.appContextUrl = "resources/appContext.json";
+        //Koala.appContextUrl = window.location.protocol + "//" + window.location.hostname + "/gis_client_configs/appContext.json";
+    </script>
+
   </head>
   <body>
     <div id="mocha"></div>
@@ -17,7 +31,8 @@
     Ext.Loader.setConfig({
         enabled: true,
         paths: {
-            BasiGX: '../../packages/remote/BasiGX/src',
+            BasiGX: '../../lib/BasiGX/src',
+            GeoExt: '../../lib/geoext3/src',
             Koala: 'http://localhost:3001'
         }
     });
