--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <script src="resources/lib/proj4js/proj4-defs.js"></script>
     <script src="resources/lib/openlayers-v3.19.1-dist/ol.js"></script>
     <script src="resources/lib/d3/d3.js"></script>
+    <script src="resources/lib/download-1.4.7/download.min.js"></script>
     <script type="text/javascript">
         // configure the appContext URL to be used to get the application context
         var Koala = Koala || {};
