Fixes GeoExt path for tests.

--- a/src/test/modern/index.html
+++ b/src/test/modern/index.html
@@ -32,7 +32,7 @@
         enabled: true,
         paths: {
             BasiGX: '../../lib/BasiGX/src',
-            GeoExt: '../../lib/geoext3/src',
+            GeoExt: '../../lib/GeoExt/src',
             Koala: 'http://localhost:3001'
         }
     });
