Adds polyfill for requestAnimationFrame.

--- a/src/test/classic/index.html
+++ b/src/test/classic/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../node_modules/mocha/mocha.css" />
     <link rel="stylesheet" type="text/css" href="../../resources/lib/openlayers-v3.19.1-dist/ol.css">
 
+    <script src="../raf.polyfill.js"></script>
     <script src="../../resources/lib/proj4js/proj4.js"></script>
     <script src="../../resources/lib/proj4js/proj4-defs.js"></script>
     <script src="../../resources/lib/openlayers-v3.19.1-dist/ol.js"></script>
