Add Moment.js resource file to test index.html

--- a/src/test/modern/index.html
+++ b/src/test/modern/index.html
@@ -12,6 +12,7 @@
     <script src="../../resources/lib/proj4js/proj4-defs.js"></script>
     <script src="../../resources/lib/openlayers-v3.19.1-dist/ol.js"></script>
     <script src="../../resources/lib/d3/d3.js"></script>
+    <script src="../../resources/lib/momentjs/moment-with-locales.js"></script>
     <script src="../../ext/build/ext-modern-all.js"></script>
     <script src="../../node_modules/expect.js/index.js"></script>
     <script src="../../node_modules/sinon/pkg/sinon.js"></script>
