--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
         // configure the appContext URL to be used to get the application context
         var Koala = Koala || {};
         // must be queryable from XHR (CORS…)
-        // Koala.appContextUrl = "resources/appContext.json";
-        Koala.appContextUrl = window.location.protocol + "//" + window.location.hostname + "/gis_client_configs/appContext.json";
+        Koala.appContextUrl = "resources/appContext.json";
+        // Koala.appContextUrl = window.location.protocol + "//" + window.location.hostname + "/gis_client_configs/appContext.json";
     </script>
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
@@ -63,9 +63,25 @@
             //};
         };
     </script>
-
+    <style>
+        div#loadmask {
+            font-weight: 100;
+            font-family: 'Open Sans', 'Helvetica Neue', helvetica, arial, verdana, sans-serif;
+            position: absolute;
+            top: 35%;
+            left: 42%;
+        }
+    </style>
     <!-- The line below must be kept intact for Sencha Cmd to build your application -->
     <script id="microloader" type="text/javascript" src="bootstrap.js"></script>
 </head>
-<body></body>
+<body>
+    <div>
+        <div id="loadmask">
+            <img src="resources/images/bfs-logo.png" style="width:200px" /><br />
+            <img src="resources/images/loader.gif" />
+            Loading, please wait...
+        </div>
+    </div>
+</body>
 </html>
