updated imprint- and sitepolicy.html

--- a/src/resources/imprint.html
+++ b/src/resources/imprint.html
@@ -7,9 +7,9 @@
 			<p>Bundesrepublik Deutschland, vertreten durch die Bundesministerin für Umwelt, Naturschutz, Bau und Reaktorsicherheit, diese vertreten durch den Präsidenten des Bundesamtes für Strahlenschutz, Willy-Brandt-Straße 5, D-38226 Salzgitter</p>
 
 			<h3>Verantwortlich für den Inhalt</h3>
-			<p>??? Bundesamt für Strahlenschutz (<abbr title="Bundesamt für Strahlenschutz (Federal Office for Radiation Protection)">BfS</abbr>)<br>
+			<p>Bundesamt für Strahlenschutz (<abbr title="Bundesamt für Strahlenschutz (Federal Office for Radiation Protection)">BfS</abbr>)<br>
 			Pressereferat <br>
-			- ???</p>
+			Ina Stelljes</p>
 
 			<h2>Adresse</h2>
 			<div class="address singleview"><strong>Bundesamt für Strahlenschutz</strong><br>
@@ -38,7 +38,7 @@
 			</div>
 
 			<h2>Rechtliche Hinweise</h2>
-			<p>Der Öffentlichkeit soll der Zugang zu Daten des Bundesamtes für Strahlenschutz über den Inhalt des Internetangebots von <b>TODO</b> www.bfs.de <b>TODO</b> erleichtert werden. Auf die Richtigkeit, Aktualität, Vollständigkeit, Verständlichkeit und jederzeitige Verfügbarkeit der bereitgestellten Informationen wird sorgfältig geachtet.</p>
+			<p>Der Öffentlichkeit soll der Zugang zu Daten des Bundesamtes für Strahlenschutz über den Inhalt des Internetangebots von <a href="https://www.imis.bfs.de/geoportal/" target="_blank">www.imis.bfs.de/geoportal</a> erleichtert werden. Auf die Richtigkeit, Aktualität, Vollständigkeit, Verständlichkeit und jederzeitige Verfügbarkeit der bereitgestellten Informationen wird sorgfältig geachtet.</p>
 			<p>Dennoch sind folgende Einschränkungen zu machen:</p>
 
 			<h3>Inhalte anderweitiger Anbieter</h3>
