--- a/src/resources/sitepolicy.html
+++ b/src/resources/sitepolicy.html
@@ -23,7 +23,7 @@
 
 			<h2>3. Ergänzende Bestimmungen</h2>
 			<p>Mit der reinen Nutzung der Daten kommt keinerlei Vertragsverhältnis zwischen dem BfS und dem Nutzer zustande.</p>
-			<p>Ergänzend wird auf die rechtlichen Hinweise des Internetangebots des BfS unter der URL <b>TODO </b>GeoPortal-URL<b> TODO</b> verwiesen.</p>
+			<p>Ergänzend wird auf die rechtlichen Hinweise des Internetangebots des BfS unter der URL <a href="https://www.imis.bfs.de/geoportal/" target="_blank">www.imis.bfs.de/geoportal</a> verwiesen.</p>
 			<p>Soweit Geodaten im Sinne der GeoNutzV betroffen sind, gelten darüber hinaus die rechtlichen Bestimmungen dieser Verordnung in der jeweils gültigen Fassung.</p>
 			<p>Sofern Teile oder einzelne Formulierungen dieses Textes der geltenden Rechtslage nicht, nicht mehr oder nicht vollständig entsprechen sollten, bleiben die übrigen Teile dieser Nutzungsbedingungen in ihrem Inhalt und ihrer Gültigkeit davon unberührt.</p>
 		</div>
