reverted wrong commits for index.html

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <script src="resources/lib/d3/d3.js"></script>
     <script src="resources/lib/download-1.4.7/download.min.js"></script>
     <script src="resources/lib/momentjs/moment-with-locales.js"></script>
+    <script src="resources/lib/turfjs-4.5.2/turf.min.js"></script>
     <script type="text/javascript">
         // configure the appContext URL to be used to get the application context
         var Koala = Koala || {};
