Addded Selection button

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,13 @@
     <script src="resources/lib/download-1.4.7/download.min.js"></script>
     <script src="resources/lib/momentjs/moment-with-locales.js"></script>
     <script src="resources/lib/turfjs-4.5.2/turf.min.js"></script>
+    <!-- JSONIX -->
+    <script src="resources/lib/jsonix/Jsonix-all.js"></script>
+    <script src="resources/lib/jsonix/SLD_1_0_0_GeoServer.js"></script>
+    <script src="resources/lib/jsonix/Filter_1_0_0.js"></script>
+    <script src="resources/lib/jsonix/GML_2_1_2.js"></script>
+    <script src="resources/lib/jsonix/XLink_1_0.js"></script>
+
     <script type="text/javascript">
         // configure the appContext URL to be used to get the application context
         var Koala = Koala || {};
