revert changed index.html

--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,8 @@
         // configure the appContext URL to be used to get the application context
         var Koala = Koala || {};
         // must be queryable from XHR (CORS…)
-        Koala.appContextUrl = "resources/appContext.json";
-        // Koala.appContextUrl = window.location.protocol + "//" + window.location.hostname + "/gis_client_configs/appContext.json";
+        // Koala.appContextUrl = "resources/appContext.json";
+        Koala.appContextUrl = window.location.protocol + "//" + window.location.hostname + "/gis_client_configs/appContext.json";
     </script>
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
