initial try at uploading metadata to gnos

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
     <script src="resources/lib/jsonix/Filter_1_0_0.js"></script>
     <script src="resources/lib/jsonix/GML_2_1_2.js"></script>
     <script src="resources/lib/jsonix/XLink_1_0.js"></script>
+    <script src="resources/lib/shp-write/shpwrite.js"></script>
 
     <script type="text/javascript">
         // configure the appContext URL to be used to get the application context
