--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <script src="resources/lib/proj4js/proj4.js"></script>
     <script src="resources/lib/proj4js/proj4-defs.js"></script>
     <script src="resources/lib/openlayers-v3.19.1-dist/ol.js"></script>
+    <script src="resources/lib/jsts/jsts.min.js"></script>
     <script src="resources/lib/d3/d3.js"></script>
     <script src="resources/lib/download-1.4.7/download.min.js"></script>
     <script src="resources/lib/momentjs/moment-with-locales.js"></script>
