--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
     <title>IMIS3[GIS] - BfS - Bundesamt f&uuml;r Strahlenschutz</title>
 
     <link rel="stylesheet" type="text/css" href="resources/lib/openlayers-v3.19.1-dist/ol.css">
+    <!-- Required for non-UTF encodings -->
+    <script src="resources/lib/encoding-polyfill/encoding-indexes.js"></script>
+    <script src="resources/lib/encoding-polyfill/encoding.js"></script>
     <script src="resources/lib/es6-promise-4.1.0/dist/es6-promise.auto.min.js"></script>
     <script src="resources/lib/html2canvas.js"></script>
     <script src="resources/lib/proj4js/proj4.js"></script>
