adjusted responsible party on imprint.html

--- a/src/resources/imprint.html
+++ b/src/resources/imprint.html
@@ -8,8 +8,8 @@
 
 			<h3>Verantwortlich für den Inhalt</h3>
 			<p>Bundesamt für Strahlenschutz (<abbr title="Bundesamt für Strahlenschutz (Federal Office for Radiation Protection)">BfS</abbr>)<br>
-			Pressereferat <br>
-			Ina Stelljes</p>
+			Präsidentin <br>
+			Inge Paulini</p>
 
 			<h2>Adresse</h2>
 			<div class="address singleview"><strong>Bundesamt für Strahlenschutz</strong><br>
