add polyfill to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
     <script src="resources/lib/jsonix/Filter_1_0_0.js"></script>
     <script src="resources/lib/jsonix/GML_2_1_2.js"></script>
     <script src="resources/lib/jsonix/XLink_1_0.js"></script>
+    <script src="resources/lib/uint8array-polyfill.js"></script>
     <script src="resources/lib/shp-write/shpwrite.js"></script>
 
     <script type="text/javascript">
