--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <script src="resources/lib/encoding-polyfill/encoding-indexes.js"></script>
     <script src="resources/lib/encoding-polyfill/encoding.js"></script>
     <script src="resources/lib/es6-promise-4.1.0/dist/es6-promise.auto.min.js"></script>
-    <script src="resources/lib/html2canvas.js"></script>
+    <script src="resources/lib/html2canvas.min.js"></script>
     <script src="resources/lib/proj4js/proj4.js"></script>
     <script src="resources/lib/proj4js/proj4-defs.js"></script>
     <script src="resources/lib/openlayers-v4.6.4-dist/ol.js"></script>
