Umbenennung BMUB in Impressum

--- a/src/resources/imprint.html
+++ b/src/resources/imprint.html
@@ -4,7 +4,7 @@
 			<h1>Impressum</h1>
 
 			<h2>Herausgeber</h2>
-			<p>Bundesrepublik Deutschland, vertreten durch die Bundesministerin für Umwelt, Naturschutz, Bau und Reaktorsicherheit, diese vertreten durch den Präsidenten des Bundesamtes für Strahlenschutz, Willy-Brandt-Straße 5, D-38226 Salzgitter</p>
+			<p>Bundesrepublik Deutschland, vertreten durch die Bundesministerin für Umwelt, Naturschutz und nukleare Sicherheit, diese vertreten durch die Präsidentin des Bundesamtes für Strahlenschutz, Willy-Brandt-Straße 5, D-38226 Salzgitter</p>
 
 			<h3>Verantwortlich für den Inhalt</h3>
 			<p>Bundesamt für Strahlenschutz (<abbr title="Bundesamt für Strahlenschutz (Federal Office for Radiation Protection)">BfS</abbr>)<br>
