--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <script src="resources/lib/openlayers-v4.6.4-dist/ol.js"></script>
     <script src="resources/lib/d3/d3.min.js"></script>
     <script src="resources/lib/download-1.4.7/download.min.js"></script>
+    <script src="resources/lib/PapaParse/4.5.0/papaparse.min.js"></script>
     <script src="resources/lib/momentjs/moment-with-locales.js"></script>
     <script src="resources/lib/turfjs-5.1.6/turf.min.js"></script>
     <!-- JSONIX -->
