updated imprint and added privacy-button

--- a/src/resources/sitepolicy.html
+++ b/src/resources/sitepolicy.html
@@ -1,30 +1,34 @@
-<div id="sitepolicy">
+<div id='sitepolicy'>
 	<div>
-		<div class="singleview">
-			<h1 style='line-height:30px;'>Nutzungsbedingungen für die Verwendung von Fachdaten des Bundesamtes für Strahlenschutz</h1>
+		<div class='singleview'>
+			<h1 style='line-height:30px;'>Nutzungsbedingungen</h1>
 
-			<h2>Nutzung der Daten</h2>
-			<p>Die Nutzung der vom Bundesamt für Strahlenschutz (nachfolgend: BfS) erhobenen Daten sowie im Rahmen von IMIS bereit gestellten Daten setzt voraus, dass Sie den nachfolgenden Nutzungsbedingungen zustimmen. Mit dem Herunterladen und Speichern der Daten und der Nutzung der Geodaten-Dienst des BfS erkennen Sie die Nutzungsbedingungen an. Bitte lesen Sie sich diese vorher sorgfältig durch.</p>
+			<h2>OpenData</h2>
+			<p>Mit der Bereitstellung seiner Messdaten als <b>OpenData</b> über standardisierte Schnittstellen möchte das Bundesamt für Strahlenschutz den Zugang zu seinen öffentlich finanzierten Datenbeständen deutlich erleichtern.</p>
 
-			<h2>1. Urheberrecht</h2>
-			<p>Daten im Sinne dieser Nutzungsbedingungen sind alle vom BfS erhobenen Fachdaten, ihre Auswertungen, grafischen Darstellungen, Visualisierungen, die auf den Daten beruhenden Applikationen sowie die Geodaten im Sinne der Verordnung zur Festlegung der Nutzungsbedingungen für die Bereitstellung von Geodaten des Bundes (nachfolgend: GeoNutzV). Die veröffentlichten Daten unterliegen grundsätzlich dem deutschen Urheber- und Leistungsschutzrecht. Soweit nicht anders gekennzeichnet, liegt das Copyright für die Daten bei der Bundesrepublik Deutschland, vertreten durch das BfS.</p>
-			<p>Jede vom deutschen Urheber- und Leistungsschutzrecht oder vom einschlägigen Kennzeichenrecht nicht zugelassene Verwertung bedarf der ausdrücklichen vorherigen schriftlichen Zustimmung des BfS oder des jeweiligen Rechteinhabers.</p>
-			<p>Im Rahmen der gesetzlich zugelassenen Nutzung wird insbesondere auf die §§ 62 und 63 UrhG hingewiesen:</p>
+			<h2>Daten des <abbr title='Bundesamt für Strahlenschutz (Federal Office for Radiation Protection)'>BfS</abbr></h2>
+			<p>Sämtliche im Geoportal verfügbaren Daten des BfS werden dementsprechend unter <b>freien Datenlizenzen</b> veröffentlicht.</p>
+            <p>Dies sind:</p>
 			<ul>
-				<li>Bei der Nutzung der Daten ist es grundsätzlich verboten, sie selbst, ihren Inhalt, ihren Titel oder die Urheberbezeichnung zu ändern. Ausnahmen hiervon regelt § 62 UrhG abschließend.</li>
-				<li>Bei der Nutzung der Daten ist nach § 63 UrhG die Quelle deutlich anzugeben, also der Name des jeweiligen Urhebers sowie die Fundstelle.</li>
+				<li><a href='http://www.gesetze-im-internet.de/geonutzv/' target='_blank'>Verordnung zur Festlegung der Nutzungsbestimmungen für die Bereitstellung von Geodaten des Bundes</a></li>
+				<li><a href='https://www.govdata.de/dl-de/by-2-0' target='_blank'>Datenlizenz Deutschland - Namensnennung - Version 2.0</a></li>
 			</ul>
-			<p>Das BfS bittet darum, seine Fachdaten im Rahmen einer möglichen Veröffentlichung oder Weiterverwendung in sachlicher Art und Weise darzustellen. Das BfS unterstützt Sie gerne bei fachlichen Fragen und mit wissenschaftlichem Hintergrundwissen.</p>
-			<p>Die Nichteinhaltung der Bestimmungen des Urheberrechts stellt eine Rechtsverletzung dar. Für diesen Fall behält sich das BfS vor, rechtliche Maßnahmen zu ihrer Durchsetzung zu ergreifen. Bei Verletzung der Nutzungsbedingungen haftet der Nutzer für den der Bundesrepublik Deutschland dadurch entstandenen Schaden.</p>
+			<p>Die konkreten Lizenzen entnehmen Sie bitte den beschreibenden Metadaten des jeweiligen Datensatzes.</p>
 
-			<h2>2. Verfügbarkeit der Daten und Haftungsausschluss</h2>
-			<p>Das technische Verfahren der Bereitstellung der Daten ist noch nicht abschließend festgelegt. Es kann jederzeit ohne Vorankündigung geändert werden. Das BfS stellt die Daten mit der zur Erfüllung seiner öffentlichen Aufgaben erforderlichen Sorgfalt bereit. Es übernimmt jedoch keine Gewähr für die Richtigkeit und Vollständigkeit der Daten sowie die dauerhafte Verfügbarkeit.</p>
-			<p>Für Sach- und Vermögensschäden, die durch die Nutzung oder das Herunterladen der Daten oder den Ausfall der Nutzung der Daten entstehen, haftet die Bundesrepublik Deutschland nur bei einer vorsätzlichen oder grob fahrlässigen Pflichtverletzung. Bei vorsätzlicher oder fahrlässiger Verletzung wesentlicher Pflichten ist die Haftung auf den Ersatz des vorhersehbaren, typischerweise eintretenden Schadens begrenzt.</p>
+			<h2>Daten von Drittanbietern</h2>
+			<p>Daten von Drittanbietern stehen unter der jeweiligen Lizenz des Datenanbieters.</p>
+            <p>Dies sind u.a.:</p>
+            <ul>
+                <li>© GeoBasis-DE / <a href='https://www.bkg.bund.de/DE/Home/home.html' target='_blank'>BKG</a> 2018</li>
+                <li>© <a href='https://www.bkg.bund.de/DE/Home/home.html' target='_blank'>Bundesamt für Kartographie und Geodäsie</a> 2018, <a href='http://sg.geodatenzentrum.de/web_public/Datenquellen_TopPlus_Open.pdf' target='_blank'>Datenquellen</a></li>
+                <li>© <a href='https://www.openstreetmap.org/copyright/de' target='_blank'>OpenStreetMap-Mitwirkende</a></li>
+            </ul>
+            <p>Die jeweils gültigen Lizenzen entnehmen Sie bitte den beschreibenden Metadaten des jeweiligen Datensatzes.</p>
 
-			<h2>3. Ergänzende Bestimmungen</h2>
-			<p>Mit der reinen Nutzung der Daten kommt keinerlei Vertragsverhältnis zwischen dem BfS und dem Nutzer zustande.</p>
-			<p>Soweit Geodaten im Sinne der GeoNutzV betroffen sind, gelten darüber hinaus die rechtlichen Bestimmungen dieser Verordnung in der jeweils gültigen Fassung.</p>
-			<p>Sofern Teile oder einzelne Formulierungen dieses Textes der geltenden Rechtslage nicht, nicht mehr oder nicht vollständig entsprechen sollten, bleiben die übrigen Teile dieser Nutzungsbedingungen in ihrem Inhalt und ihrer Gültigkeit davon unberührt.</p>
-		</div>
+			<h2>Veröffentlichungen</h2>
+			<p><b>Das BfS möchte der Bevölkerung qualitativ hochwertige Informationen bieten. Wir bitten darum, die bereitgestellten Daten bei einer möglichen Veröffentlichung in sachlicher Art und Weise darzustellen.</b></p>
+            <p>Bei Rückfragen unterstützt Sie das BfS gerne mit fachlichen Erklärungen und wissenschaftlichem Hintergrundwissen.</p>
+            <p>Sollten Sie weitere Fragen zum Thema haben, so wenden Sie sich bitte unter dem Stichwort „Nutzungsbedingungen Geodaten“ an <a href='mailto:epost@bfs.de'>epost@bfs.de</a></p>
+        </div>
 	</div>
 </div>
