Adds negtive z-index to Loadingmask

--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,7 @@
             width: 310px;
             background-image: url("resources/images/animated_BfS_logo_grey.gif");
             background-repeat: no-repeat;
+            z-index: -1;
         }
     </style>
 </head>
