--- a/src/index-dev.html
+++ b/src/index-dev.html
@@ -23,7 +23,7 @@
     <script src="resources/lib/html2canvas.min.js"></script>
     <script src="resources/lib/proj4js/proj4.js"></script>
     <script src="resources/lib/proj4js/proj4-defs.js"></script>
-    <script src="resources/lib/openlayers-v4.6.4-dist/ol.js"></script>
+    <script src="resources/lib/openlayers-v4.6.4-dist/ol-debug.js"></script>
     <script src="resources/lib/jsts/jsts.min.js"></script>
     <script src="resources/lib/download-1.4.7/download.min.js"></script>
     <script src="resources/lib/PapaParse/4.5.0/papaparse.min.js"></script>
