commit of modified metadata files

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" sizes="192x192" href="./android-icon-192x192.png">
     <link rel="apple-touch-icon-precomposed" href="./ios-icon-152x152.png">
 
-    <title>IMIS3[GIS] - BfS - Bundesamt f&uuml;r Strahlenschutz</title>
+    <title>GW GIS Groundwater Measurements</title>
 
     <link rel="stylesheet" type="text/css" href="resources/lib/openlayers-v4.6.4-dist/ol.css" />
     <link rel="stylesheet" type="text/css" href="resources/lib/geostyler-libs/antd/dist/antd.min.css" />
