commit with new metadata files for new layers

--- a/src/index.html
+++ b/src/index.html
@@ -98,9 +98,9 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            height: 117px;
-            width: 310px;
-            background-image: url("resources/images/animated_BfS_logo_grey.gif");
+            height: 236px;
+            width: 351px;
+            background-image: url("resources/images/GW-GIS-Logo.png");
             background-repeat: no-repeat;
             z-index: -1;
         }
