initial commit to include legally required "acessibility statement"

--- a/src/resources/accessibility.html
+++ b/src/resources/accessibility.html
@@ -1,23 +1,85 @@
-<div id='sitepolicy'>
-	<div>
-		<div class='singleview'>
-			<h1 style='line-height:30px;'>Informationen zur Barrierefreiheit</h1>
+<div id="imprint">
+    <div>
+        <div class="singleview">
+            <h1>Erklärung zur Barrierefreiheit</h1>
+            <p>Informationen über die Zugänglichkeit dieser Webseiten gemäß § 12b Behindertengleichstellungsgesetz (BGG) sowie über diesbezügliche Kontaktmöglichkeiten.</p>
 
-			<p>Diese Applikation ist Teil des Integrierten Mess- und Informationssystems IMIS des <abbr title='Bundesamtes für Strahlenschutz (Federal Office for Radiation Protection)'>BfS</abbr>, sie ist optimiert für den Einsatz unter Mozilla Firefox sowie Google Chrome<br>
-            Im Sinne eines "best practice" basiert diese WebGIS-Anwendung auf OpenSource-Softwarekomponenten, die Keyboard-Navigation ermöglichen,
-            konstrastreiche Darstellungen enthalten und  "Screen Reader" unterstützen.
-            Durch Umstellung auf "Tastaturmaus" (bei dem meisten Betriebssystemen über [ALT] + [linke SHIFT] + [NUM]) lässt sich die Anwendung komplett über die Tastatur steuern.
+            <p>Das Bundesamt für Strahlenschutz ist bestrebt, diesen Webauftritt im Einklang mit § 12a BGG barrierefrei zugänglich zu machen.</p>
+
+            <p>Diese Erklärung zur Barrierefreiheit gilt für https://geoportal.bfs.de.</p>
+            <h2>Stand der Vereinbarkeit mit den Anforderungen</h2>
+
+            <p>Diese Webseiten sind mit den Vorgaben der harmonisierten europäischen Norm EN 301 549 V2.1.2 (08-2018) bedingt vereinbar.</p>
+            <p>Diese Applikation ist Teil des Integrierten Mess- und Informationssystems IMIS des <abbr title='Bundesamtes für Strahlenschutz (Federal Office for Radiation Protection)'>BfS</abbr>,
+                sie ist optimiert für den Einsatz unter Mozilla Firefox sowie Google Chrome.<br>
+                Das Geoportal des <abbr title="Bundesamt für Strahlenschutz (Federal Office for Radiation Protection)">BfS</abbr> basiert auf interoperablen Geodatendiensten (siehe: <a
+                    href="http://www.gdi-de.org/download/2020-03/Leitfaden-Geodienste-im%20Internet.pdf" type="application/pdf; length=1190647" title="Leitfaden-Geodienste-im Internet.pdf" target="_blank">Leitfaden: GEODATENDIENSTE im
+                    Internet</a>)<br>
+                Im Sinne eines "best practice" verwendet diese WebGIS-Anwendung OpenSource-Softwarekomponenten, die Keyboard-Navigation ermöglichen,
+                konstrastreiche Darstellungen enthalten und "Screen Reader" unterstützen.
+
+                Durch Umstellung auf <a href="https://de.wikipedia.org/wiki/Tastaturmaus" target="_blank">"Tastaturmaus"</a>
+                (bei dem meisten Betriebssystemen über [ALT] + [linke SHIFT] + [NUM]) lässt sich die Anwendung komplett über die Tastatur steuern.
             </p>
-            <p>Wir bemühen uns kontinuierlich die noch bestehenden Einschränkungen weiter abzubauen.</p>
-			<ul>
-				<li><a href='http://www.ein-link-zu-foo.de' target='_blank'>eine unmittelbar zugängliche barrierefrei gestaltete Möglichkeit, elektronisch Kontakt aufzunehmen, um noch bestehende Barrieren mitzuteilen und um Informationen zur Umsetzung der Barrierefreiheit zu erfragen</a></li>
-                <br>
-                <li><a href='http://www.ein-link-zu-bar.de' target='_blank'>Hinweis auf das Schlichtungsverfahren nach §16, der
-                    <ul>
-                        <li>a.	die Möglichkeit, ein solches Schlichtungsverfahren durchzuführen, erläutert und </li>
-                        <li>b.	die Verlinkung zur Schlichtungsstelle enthält.</li>
-                    <ul>
-                </a></li>
-			</ul>
-	</div>
+            <p>Nachfolgend aufgeführte Inhalte sind nicht bzw. nur teilweise barrierefrei zugänglich. Eine Verbesserung der Zugänglichkeit ist geplant und wird redaktionell behoben.</p>
+
+            <p></p>
+
+            <ol> <li>
+                <p>Informationen in Gebärdensprache und leichter Sprache</p>
+                <p>Die wesentlichen Inhalte dieser Erklärung zur Barrierefreiheit sowie die wesentlichen Inhalte der Webseite und Hinweise zur Navigation werden nicht in Gebärdensprache und leichter Sprache bereitgestellt</p>
+                </li>
+
+                <li>
+                    <p>Karten</p>
+                    <p>Kartenkacheln (Bilder) enthalten keine alternative Textversion.</p>
+                </li>
+
+                <li>
+                    <p>Datentabellen</p>
+                    <p>In Datentabellen fehlen teilweise Strukturen und Auszeichnungen.</p>
+                </li>
+
+                <li>
+                    <p>Anderssprachige Abschnitte</p>
+                    <p>Nicht alle anderssprachigen Abschnitte sind technisch gekennzeichnet.</p>
+                </li>
+
+                <li>
+                    <p>Bedienelemente, wie die Sortier-Auswahl, Tab- und Akkordeonsteuerung, sind grundsätzlich nutzbar, entsprechen jedoch nicht immer vollständig den erwarteten Bedienkonzepten. Dies betrifft beispielsweise die Tastaturbedienbarkeit
+                        von Tab-Modulen.</p>
+                </li>
+            </ol>
+
+            <h2>Erstellung dieser Erklärung zur Barrierefreiheit</h2>
+
+            <p>Diese Erklärung wurde am 21.09.2020 erstellt. Die Einschätzung basiert auf einer mit Stand von August 2020 ausgeführten Selbstbewertung.</p>
+            <h2>Feedback und Kontaktangaben</h2>
+
+            <p>Über das <a href="https://www.bfs.de/DE/service/kontakt/kontakt_node.html" target="_blank">Kontaktformular</a> können Sie Mängel in Bezug auf die Einhaltung der Barrierefreiheitsanforderungen mitteilen und Informationen über Inhalte
+                einholen, die von den gesetzlichen Bestimmungen ausgeschlossen sind.</p>
+
+            <p>Bundesamt für Strahlenschutz<br />
+                Postfach 10 01 49<br />
+                D-38201 Salzgitter<br />
+                E-Mail: info@bfs.de</p>
+            <h2>Durchsetzungsverfahren</h2>
+
+            <p>Bei nicht zufriedenstellenden Antworten aus oben genannter Kontaktmöglichkeit können Sie unter www.schlichtungsstelle-bgg.de einen Antrag auf Einleitung eines Schlichtungsverfahrens nach dem Behindertengleichstellungsgesetz (BGG)
+                stellen.</p>
+
+            <p>Die Schlichtungsstelle nach § 16 BGG hat die Aufgabe, Streitigkeiten zwischen Menschen mit Behinderungen und öffentlichen Stellen des Bundes, insbesondere zum Thema Barrierefreiheit, außergerichtlich beizulegen. Das
+                Schlichtungsverfahren ist kostenlos. Es muss kein Rechtsbeistand eingeschaltet werden.</p>
+
+            <p>Weitere Informationen zu dem Verfahren und der Antragstellung finden Sie auf den Seiten der Schlichtungsstelle nach dem Behindertengleichstellungsgesetz (BGG).</p>
+            <h2>Kontakt Schlichtungsstelle:</h2>
+
+            <p>Schlichtungsstelle nach dem Behindertengleichstellungsgesetz bei dem Beauftragten der Bundesregierung für die Belange von Menschen mit Behinderungen<br />
+                Mauerstraße 53<br />
+                10117 Berlin<br />
+                Telefon: 030 18 527 2805<br />
+                E-Mail: info@schlichtungsstelle-bgg.de<br />
+                Internet: www.schlichtungsstelle-bgg.de</p>
+        </div>
+    </div>
 </div>
