--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
     <script src="resources/lib/uint8array-polyfill.js"></script>
     <script src="resources/lib/shp-write/shpwrite.js"></script>
     <script src="resources/lib/d3-util/browser/main.js"></script>
+    <script src="resources/lib/openrouteservice-js/ors-js-client.js"></script>
 
     <script type="text/javascript">
         // configure the appContext URL to be used to get the application context
