set loadmask background-color due to different browser behaviour

--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,7 @@
             width: 160px;
             /*background-image: url("resources/images/bfs-logo.png");
             background-repeat: no-repeat; */
+            background-color: #ffffff;
             z-index: -1;
         }
 
